[package]
name = "ltc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "0.8.1"
ndarray = "0.15.6"
rayon = "1.7.0"
serial_test = "2.0.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "encoding_benchmark"
harness = false
[[bench]]
name = "decoding_benchmark"
harness = false

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
